// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResultHandler > 'arrayResultHandler' > Should handle HTTP error 1`] = `"Something not found"`;

exports[`ResultHandler > 'arrayResultHandler' > Should handle generic error 1`] = `
[
  [
    "Server side error",
    {
      "error": InternalServerError({
        "cause": Error({
          "message": "Some error",
        }),
        "message": "Some error",
      }),
      "payload": {
        "something": 453,
      },
      "url": "http://something/v1/anything",
    },
  ],
]
`;

exports[`ResultHandler > 'arrayResultHandler' > Should handle generic error 2`] = `"Some error"`;

exports[`ResultHandler > 'arrayResultHandler' > Should handle regular response 1`] = `
[
  "One",
  "Two",
  "Three",
]
`;

exports[`ResultHandler > 'arrayResultHandler' > Should handle schema error 1`] = `"something: Expected string, got number"`;

exports[`ResultHandler > 'arrayResultHandler' > should forward output schema examples 1`] = `
{
  "examples": [
    [
      "One",
      "Two",
      "Three",
    ],
  ],
}
`;

exports[`ResultHandler > 'arrayResultHandler' > should generate negative response example 1`] = `
{
  "examples": [
    "Sample error message",
  ],
}
`;

exports[`ResultHandler > 'defaultResultHandler' > Should handle HTTP error 1`] = `
{
  "message": "Something not found",
}
`;

exports[`ResultHandler > 'defaultResultHandler' > Should handle generic error 1`] = `
[
  [
    "Server side error",
    {
      "error": InternalServerError({
        "cause": Error({
          "message": "Some error",
        }),
        "message": "Some error",
      }),
      "payload": {
        "something": 453,
      },
      "url": "http://something/v1/anything",
    },
  ],
]
`;

exports[`ResultHandler > 'defaultResultHandler' > Should handle generic error 2`] = `
{
  "message": "Some error",
}
`;

exports[`ResultHandler > 'defaultResultHandler' > Should handle regular response 1`] = `
{
  "anything": 118,
  "items": [
    "One",
    "Two",
    "Three",
  ],
}
`;

exports[`ResultHandler > 'defaultResultHandler' > Should handle schema error 1`] = `
{
  "message": "something: Expected string, got number",
}
`;

exports[`ResultHandler > 'defaultResultHandler' > should forward output schema examples 1`] = `
{
  "examples": [
    {
      "items": [
        "One",
        "Two",
        "Three",
      ],
      "str": "test",
    },
  ],
}
`;

exports[`ResultHandler > 'defaultResultHandler' > should generate negative response example 1`] = `
{
  "examples": [
    {
      "message": "Sample error message",
    },
  ],
}
`;

exports[`ResultHandler > arrayResultHandler should attempt to take examples from the items prop 1`] = `
{
  "examples": [
    [
      "One",
      "Two",
      "Three",
    ],
  ],
}
`;
